--- a/E-Commerce.Api/appsettings.json
+++ b/E-Commerce.Api/appsettings.json
@@ -13,5 +13,12 @@
   },
   "ConnectionStrings": {
     "default": "Server=Mohamed\\MSSQLSERVER01;Database=E-Commerce1;Trusted_Connection=True;Integrated Security=True;TrustServerCertificate=True;"
+  },
+  "JwtSettings": {
+    "SigningKey": "fbadmEHsRPNHKMdQKGDbrkbLCUsJKfsdgahnb",
+    "Issuer": "http://localhost:5119",
+    "Audiance": "http://localhost:4200/",
+    "AccessTokenExpiryMinutes": 30,
+    "RefreshTokenExpiryMinutes": 300
   }
 }
